# discord-clone

./: .gitignore  IMPROVEMENTS.md  NGROK-SETUP.md  NGROK.md  QUICKSTART.md  README.md  SHARE.md  TAURI.md  ДЛЯ-ДРУЗЕЙ.md
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: README.txt
client/src/components/: ChannelList.jsx  ChatArea.jsx  EmojiPicker.jsx  MainLayout.jsx  SearchBar.jsx  ServerList.jsx  SpaceSettings.jsx  StatusIndicator.jsx  TitleBar.jsx  UnreadBadge.jsx  VoiceChannel.jsx
client/src/pages/: AuthPage.jsx
client/src/utils/: api.js  socket.js
server/: auth.js  db.js  package-lock.json  package.json  server.js
